--- a/WolvenKit/Views/Tools/RedTreeView.xaml
+++ b/WolvenKit/Views/Tools/RedTreeView.xaml
@@ -241,8 +241,24 @@
                     </MenuItem.Icon>
                 </MenuItem>
                 <MenuItem
+                    Command="{Binding Path=PlacementTarget.Tag.AddItemToCompiledDataCommand, RelativeSource={RelativeSource AncestorType=ContextMenu}}"
+                    Header="Create Item In Buffer"
+                    IsCheckable="False"
+                    Style="{StaticResource SyncfusionMenuItemStyle}"
+                    Visibility="{Binding Path=IsEnabled, RelativeSource={RelativeSource Self}, Mode=OneWay, Converter={StaticResource BooleanToVisibilityConverter}}">
+                    <MenuItem.Icon>
+                        <iconPacks:PackIconMaterial
+                            Width="13"
+                            Height="13"
+                            Padding="0,0,0,0"
+                            HorizontalAlignment="Center"
+                            VerticalAlignment="Center"
+                            Kind="ContentDuplicate" />
+                    </MenuItem.Icon>
+                </MenuItem>
+                <MenuItem
                     Command="{Binding Path=PlacementTarget.Tag.DuplicateChunkCommand, RelativeSource={RelativeSource AncestorType=ContextMenu}}"
-                    Header="Duplicate Item in Array"
+                    Header="Duplicate Item in Array/Buffer"
                     IsCheckable="False"
                     Style="{StaticResource SyncfusionMenuItemStyle}">
                     <MenuItem.Icon>
@@ -257,7 +273,7 @@
                 </MenuItem>
                 <MenuItem
                     Command="{Binding Path=PlacementTarget.Tag.CopyChunkCommand, RelativeSource={RelativeSource AncestorType=ContextMenu}}"
-                    Header="Copy From Array"
+                    Header="Copy From Array/Buffer"
                     IsCheckable="False"
                     Style="{StaticResource SyncfusionMenuItemStyle}">
                     <MenuItem.Icon>
@@ -272,7 +288,7 @@
                 </MenuItem>
                 <MenuItem
                     Command="{Binding Path=PlacementTarget.Tag.PasteChunkCommand, RelativeSource={RelativeSource AncestorType=ContextMenu}}"
-                    Header="Paste Into Array"
+                    Header="Paste Into Array/Buffer"
                     IsCheckable="False"
                     Style="{StaticResource SyncfusionMenuItemStyle}">
                     <MenuItem.Icon>
@@ -319,7 +335,7 @@
                 </MenuItem>
                 <MenuItem
                     Command="{Binding Path=PlacementTarget.Tag.DeleteItemCommand, RelativeSource={RelativeSource AncestorType=ContextMenu}}"
-                    Header="Delete"
+                    Header="Delete Item in Array/Buffer"
                     IsCheckable="False"
                     Style="{StaticResource SyncfusionMenuItemStyle}">
                     <MenuItem.Icon>
@@ -330,6 +346,21 @@
                             HorizontalAlignment="Center"
                             VerticalAlignment="Center"
                             Kind="Remove" />
+                    </MenuItem.Icon>
+                </MenuItem>
+                <MenuItem
+                    Command="{Binding Path=PlacementTarget.Tag.DeleteAllCommand, RelativeSource={RelativeSource AncestorType=ContextMenu}}"
+                    Header="Delete All Items in Array/Buffer"
+                    IsCheckable="False"
+                    Style="{StaticResource SyncfusionMenuItemStyle}">
+                    <MenuItem.Icon>
+                        <iconPacks:PackIconMaterial
+                            Width="13"
+                            Height="13"
+                            Padding="0,0,0,0"
+                            HorizontalAlignment="Center"
+                            VerticalAlignment="Center"
+                            Kind="NotificationClearAll" />
                     </MenuItem.Icon>
                 </MenuItem>
             </ContextMenu>
@@ -519,6 +550,35 @@
             LoadOnDemandCommand="{Binding OnDemandLoadingCommand}"
             QueryNodeSize="TreeView_QueryNodeSize"
         -->
+        <syncfusion:SfTreeView.DragPreviewTemplate>
+            <DataTemplate DataType="{x:Type syncfusion:TreeViewDragInfo}">
+                <Border BorderBrush="{StaticResource BorderAlt}" BorderThickness="1">
+                    <Grid Background="{StaticResource ContentBackgroundAlt2}">
+                        <Grid.RowDefinitions>
+                            <RowDefinition />
+                            <RowDefinition />
+                            <RowDefinition />
+                        </Grid.RowDefinitions>
+                        <TextBlock
+                            Grid.Row="0"
+                            Margin="5,2,5,0"
+                            VerticalAlignment="Center"
+                            Text="Duplicate item here:" />
+                        <TextBlock
+                            Grid.Row="1"
+                            Margin="5,0,5,2"
+                            VerticalAlignment="Center"
+                            Foreground="{StaticResource WolvenKitTan}"
+                            Text="{Binding Data[0].Content.Type}" />
+                        <TextBlock
+                            Grid.Row="2"
+                            Margin="5,0,5,2"
+                            VerticalAlignment="Center"
+                            Text="{Binding Data[0].Content.Descriptor}" />
+                    </Grid>
+                </Border>
+            </DataTemplate>
+        </syncfusion:SfTreeView.DragPreviewTemplate>
         <syncfusion:SfTreeView.HierarchyPropertyDescriptors>
             <treeViewEngine:HierarchyPropertyDescriptor
                 ChildPropertyName="TVProperties"
