Added function/button to launch CP77 via Steam
Adds a function and a button to the shell next to the existing "Launch Game" button that runs the default steam id for Cyberpunk 2077. Not fully added to the ribbon view however as i don't know how to do that. Seemingly "RibbonView.g.i.cs" would have to be generated again. I hardly know what I'm doing so please be careful with this

--- a/WolvenKit/Views/Shell/RibbonView.xaml
+++ b/WolvenKit/Views/Shell/RibbonView.xaml
@@ -449,6 +449,18 @@
                             <TextBlock Text="Launch Game" Padding="5,0,0,0" />
                         </StackPanel>
                     </Button>
+                    <Separator Margin="6" />
+                    <Button x:Name="ToolbarLaunchSteamGameButton" Command="{Binding LaunchSteamGameCommand}" ToolTip="Launch Game - Did You Remember To Pack &amp; Install?">
+                        <StackPanel Orientation="Horizontal">
+                            <Grid>
+                                <iconPacks:PackIconCodicons Style="{StaticResource WolvenKitToolBarButtonIcon}"
+                                Foreground="{StaticResource WolvenKitYellow}"
+                                Padding="0,0,2,2"
+                                Kind="RunAll" />
+                            </Grid>
+                            <TextBlock Text="Launch Game (Steam)" Padding="5,0,0,0" />
+                        </StackPanel>
+                    </Button>
                     <Separator Margin="3" />
                     <TextBlock
                         Height="30"
