implements basic chunkmask editor

--- a/WolvenKit/Views/Editors/RedTypeView.xaml
+++ b/WolvenKit/Views/Editors/RedTypeView.xaml
@@ -287,6 +287,11 @@
                         <editors:RedUlongEditor RedNumber="{Binding Data, Mode=TwoWay}" />
                     </DataTemplate>
                 </converters:RedEditorTemplateSelector.RedUlongEditor>
+                <converters:RedEditorTemplateSelector.RedChunkMaskEditor>
+                    <DataTemplate>
+                        <editors:RedChunkMaskEditor RedNumber="{Binding Data, Mode=TwoWay}" />
+                    </DataTemplate>
+                </converters:RedEditorTemplateSelector.RedChunkMaskEditor>
                 <converters:RedEditorTemplateSelector.RedColorEditor>
                     <DataTemplate>
                         <editors:RedColorEditor RedColor="{Binding Data, Mode=TwoWay}" />
