add some quick nodes

--- a/WolvenKit/Views/Documents/RDTGraphView.xaml
+++ b/WolvenKit/Views/Documents/RDTGraphView.xaml
@@ -6,8 +6,8 @@
     xmlns:documents="clr-namespace:WolvenKit.ViewModels.Documents;assembly=WolvenKit.App"
     xmlns:local="clr-namespace:WolvenKit.Views.Documents"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:reactiveUi="http://reactiveui.net"
     xmlns:nodify="https://miroiu.github.io/nodify"
+    xmlns:reactiveUi="http://reactiveui.net"
     d:DataContext="{d:DesignInstance Type={x:Type documents:RDTGraphViewModel}}"
     d:DesignHeight="450"
     d:DesignWidth="800"
@@ -18,9 +18,11 @@
 
 
     <Grid Background="#1E1E1E">
-        <nodify:NodifyEditor x:Name="Editor"
-                             Background="{StaticResource ContentBackgroundAlt2}" />
-    </Grid>    
+        <nodify:NodifyEditor
+            x:Name="Editor"
+            Background="{StaticResource ContentBackgroundAlt2}"
+            ItemsSource="{Binding Nodes}" />
+    </Grid>
 
-        
+
 </reactiveUi:ReactiveUserControl>
