--- a/WolvenKit/Views/Documents/RDTGraphView.xaml
+++ b/WolvenKit/Views/Documents/RDTGraphView.xaml
@@ -2,12 +2,15 @@
     x:Class="WolvenKit.Views.Documents.RDTGraphView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:converters="clr-namespace:WolvenKit.Functionality.Converters;assembly=WolvenKit.App"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:documents="clr-namespace:WolvenKit.ViewModels.Documents;assembly=WolvenKit.App"
+    xmlns:editors="clr-namespace:WolvenKit.Views.Editors"
     xmlns:local="clr-namespace:WolvenKit.Views.Documents"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:nodify="https://miroiu.github.io/nodify"
     xmlns:reactiveUi="http://reactiveui.net"
+    xmlns:syncfusion="http://schemas.syncfusion.com/wpf"
     d:DataContext="{d:DesignInstance Type={x:Type documents:RDTGraphViewModel}}"
     d:DesignHeight="450"
     d:DesignWidth="800"
@@ -18,10 +21,132 @@
 
 
     <Grid Background="#1E1E1E">
+
+        <Grid.Resources>
+            <converters:FlowToDirectionConverter x:Key="FlowToDirectionConverter" />
+            <Style x:Key="ConnectionStyle" TargetType="{x:Type nodify:BaseConnection}">
+                <Setter Property="Cursor" Value="Hand" />
+                <Setter Property="ToolTip" Value="Double click to split" />
+            </Style>
+            <DataTemplate x:Key="ConnectionTemplate">
+                <nodify:Connection
+                    Direction="{Binding Output.Flow, Converter={StaticResource FlowToDirectionConverter}}"
+                    OffsetMode="Edge"
+                    Source="{Binding Output.Anchor}"
+                    SourceOffset="10,0"
+                    Style="{StaticResource ConnectionStyle}"
+                    Target="{Binding Input.Anchor}"
+                    TargetOffset="10,0" />
+            </DataTemplate>
+        </Grid.Resources>
+
+        <!--Grid.ColumnDefinitions>
+            <ColumnDefinition />
+            <ColumnDefinition Width="5" />
+            <ColumnDefinition />
+        </Grid.ColumnDefinitions-->
+
         <nodify:NodifyEditor
             x:Name="Editor"
-            Background="{StaticResource ContentBackgroundAlt2}"
-            ItemsSource="{Binding Nodes}" />
+            Grid.Column="0"
+            Background="{StaticResource ContentBackgroundAlt}"
+            Connections="{Binding Connections}"
+            DisplayConnectionsOnTop="False"
+            EnableRealtimeSelection="True"
+            ItemsSource="{Binding Nodes}"
+            PendingConnection="{Binding PendingConnection}"
+            SelectedItems="{Binding SelectedNodes}">
+            <nodify:NodifyEditor.Style>
+                <Style BasedOn="{StaticResource {x:Type nodify:NodifyEditor}}" TargetType="{x:Type nodify:NodifyEditor}">
+                    <Setter Property="ConnectionTemplate" Value="{StaticResource ConnectionTemplate}" />
+                </Style>
+            </nodify:NodifyEditor.Style>
+            <nodify:NodifyEditor.Resources>
+                <Style BasedOn="{StaticResource {x:Type nodify:PendingConnection}}" TargetType="{x:Type nodify:PendingConnection}">
+                    <Setter Property="CompletedCommand" Value="{Binding Graph.CreateConnectionCommand}" />
+                    <Setter Property="Source" Value="{Binding Source, Mode=OneWayToSource}" />
+                    <Setter Property="Target" Value="{Binding PreviewTarget, Mode=OneWayToSource}" />
+                    <Setter Property="PreviewTarget" Value="{Binding PreviewTarget, Mode=OneWayToSource}" />
+                    <Setter Property="Content" Value="{Binding PreviewText}" />
+                    <Setter Property="EnablePreview" Value="True" />
+                    <Setter Property="EnableSnapping" Value="True" />
+                    <Setter Property="AllowOnlyConnectors" Value="false" />
+                    <Setter Property="Direction" Value="{Binding Source.Flow, Converter={StaticResource FlowToDirectionConverter}}" />
+                    <Setter Property="Template">
+                        <Setter.Value>
+                            <ControlTemplate TargetType="{x:Type nodify:PendingConnection}">
+                                <Canvas>
+                                    <nodify:DirectionalConnection
+                                        ArrowSize="0 0"
+                                        Direction="{TemplateBinding Direction}"
+                                        Source="{TemplateBinding SourceAnchor}"
+                                        Stroke="{TemplateBinding Stroke}"
+                                        StrokeDashArray="{TemplateBinding StrokeDashArray}"
+                                        StrokeThickness="{TemplateBinding StrokeThickness}"
+                                        Target="{TemplateBinding TargetAnchor}" />
+                                    <Border
+                                        Canvas.Left="{Binding TargetAnchor.X, RelativeSource={RelativeSource TemplatedParent}}"
+                                        Canvas.Top="{Binding TargetAnchor.Y, RelativeSource={RelativeSource TemplatedParent}}"
+                                        Margin="15"
+                                        Padding="{TemplateBinding Padding}"
+                                        Background="{TemplateBinding Background}"
+                                        BorderBrush="{TemplateBinding BorderBrush}"
+                                        BorderThickness="{TemplateBinding BorderThickness}"
+                                        CornerRadius="3"
+                                        Visibility="{TemplateBinding EnablePreview,
+                                                                     Converter={StaticResource BooleanToVisibilityConverter}}">
+                                        <ContentPresenter />
+                                    </Border>
+                                </Canvas>
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
+                </Style>
+                <Style BasedOn="{StaticResource {x:Type nodify:Connector}}" TargetType="{x:Type nodify:Connector}">
+                    <Setter Property="Anchor" Value="{Binding Anchor, Mode=OneWayToSource}" />
+                    <Setter Property="IsConnected" Value="{Binding IsConnected}" />
+                </Style>
+                <Style BasedOn="{StaticResource {x:Type nodify:NodeInput}}" TargetType="{x:Type nodify:NodeInput}">
+                    <Setter Property="Header" Value="{Binding Title}" />
+                    <Setter Property="Anchor" Value="{Binding Anchor, Mode=OneWayToSource}" />
+                    <Setter Property="IsConnected" Value="{Binding IsConnected}" />
+                </Style>
+                <Style BasedOn="{StaticResource {x:Type nodify:NodeOutput}}" TargetType="{x:Type nodify:NodeOutput}">
+                    <Setter Property="Header" Value="{Binding Title}" />
+                    <Setter Property="Anchor" Value="{Binding Anchor, Mode=OneWayToSource}" />
+                    <Setter Property="IsConnected" Value="{Binding IsConnected}" />
+                    <Setter Property="HorizontalAlignment" Value="Right" />
+                </Style>
+                <DataTemplate DataType="{x:Type documents:FlowNodeViewModel}">
+                    <nodify:Node
+                        Header="{Binding Title}"
+                        Input="{Binding Input}"
+                        Output="{Binding Output}" />
+                </DataTemplate>
+                <!--Style BasedOn="{StaticResource {x:Type nodify:Connection}}" TargetType="{x:Type nodify:Connection}">
+                    <Setter Property="Direction" Value="{Binding Output.Flow, Converter={StaticResource FlowToDirectionConverter}}" />
+                    <Setter Property="OffsetMode" Value="Edge" />
+                    <Setter Property="Source" Value="{Binding Output.Anchor, Mode=TwoWay}" />
+                    <Setter Property="SourceOffset" Value="10,0" />
+                    <Setter Property="Style" Value="{StaticResource ConnectionStyle}" />
+                    <Setter Property="Target" Value="{Binding Input.Anchor, Mode=TwoWay}" />
+                    <Setter Property="TargetOffset" Value="10,0" />
+                </Style-->
+            </nodify:NodifyEditor.Resources>
+            <nodify:NodifyEditor.ItemContainerStyle>
+                <Style BasedOn="{StaticResource {x:Type nodify:ItemContainer}}" TargetType="{x:Type nodify:ItemContainer}">
+                    <Setter Property="Location" Value="{Binding Location}" />
+                </Style>
+            </nodify:NodifyEditor.ItemContainerStyle>
+        </nodify:NodifyEditor>
+
+        <!--  Grid Splitter  -->
+        <!--syncfusion:SfGridSplitter Grid.Column="1" HorizontalAlignment="Stretch" />
+
+        <editors:RedTypeView
+            x:Name="CustomPG"
+            Grid.Column="2"
+            DataContext="{Binding SelectedChunk, IsAsync=True}" /-->
     </Grid>
 
 
