--- a/WolvenKit/Views/Tools/RedTreeView.xaml
+++ b/WolvenKit/Views/Tools/RedTreeView.xaml
@@ -547,6 +547,10 @@
         VirtualizingPanel.VirtualizationMode="Recycling"
         Visibility="Visible">
         <!--
+            TODO add copy and delete selected items
+            SelectionMode="Extended"
+        -->
+        <!--
             LoadOnDemandCommand="{Binding OnDemandLoadingCommand}"
             QueryNodeSize="TreeView_QueryNodeSize"
         -->
